[tool.poetry]
name = "repl_python3_Jolt-tips"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
web3 = "^5.26.0"
discord = "^1.7.3"
Flask = "^2.0.2"
psutil = "^5.9.0"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
